--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
                 
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-6">
-                    <a href="#slide" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group"></a>
-                    <a href="#about" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">About</a>
-                    <a href="#hr" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">HR</a>
-                    <a href="#labour" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">Labour</a>
-                    <a href="#training" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">Training</a>
-                    <a href="#contact" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">Contact</a>
+                    <a href="#slide" class="nav-link text-gray-600 hover:text-orange-300 text-lg font-medium relative group"></a>
+                    <a href="#about" class="nav-link text-gray-600 hover:text-orange-300 text-lg font-medium relative group">About</a>
+                    <a href="#hr" class="nav-link text-gray-600 hover:text-orange-300 text-lg font-medium relative group">HR</a>
+                    <a href="#labour" class="nav-link text-gray-600 hover:text-orange-300 text-lg font-medium relative group">Labour</a>
+                    <a href="#training" class="nav-link text-gray-600 hover:text-orange-300 text-lg font-medium relative group">Training</a>
+                    <a href="#system" class="nav-link text-gray-600 hover:text-orange-300 text-lg font-medium relative group">System</a>
+                    <a href="#careers" class="nav-link text-gray-600 hover:text-orange-300 text-lg font-medium relative group">Careers</a>
+                    <a href="#contact" class="nav-link text-gray-600 hover:text-orange-300 text-lg font-medium relative group">Contact</a>
                 </div>
 
                 <!-- Mobile Menu Button -->
@@ -90,6 +92,8 @@
                     <a href="#hr" class="nav-link text-gray-600  text-sm">HR</a>
                     <a href="#labour" class="nav-link text-gray-600  text-sm">Labour</a>
                     <a href="#training" class="nav-link text-gray-600  text-sm">Training</a>
+                    <a href="#system" class="nav-link text-gray-600  text-sm">System</a>
+                    <a href="#careers" class="nav-link text-gray-600  text-sm">Careers</a>
                     <a href="#contact" class="nav-link text-gray-600  text-sm">Contact</a>
                 </div>
             </div>
@@ -461,10 +465,10 @@
                                  class="object-cover w-[250px] h-[200px]">
                         </div>
                         <!-- Mobile Experience Card -->
-                        <div class="md:hidden absolute -bottom-6 -right-4 bg-teal-950 text-white p-4 rounded-lg shadow-lg">
+                        <div class="md:hidden absolute -bottom-6 -right-4 bg-gray-50 text-white p-4 rounded-lg shadow-lg">
                             <img src="images/illustration.webp" 
                                  alt="illustration" 
-                                 class="object-cover w-[250px] h-[200px]">
+                                 class="object-cover w-[100px] h-[100px]">
                         </div>
                     </div>
 
@@ -473,7 +477,7 @@
                         <!-- Mobile About Us Heading -->
                         <h2 class="text-4xl font-bold text-center mb-4 text-gray-900 md:hidden">About Us</h2>
                         <!-- Desktop About Us Heading -->
-                        <h2 class="text-4xl font-bold text-left mb-4 text-gray-900 hidden md:block">About Us</h2>
+                        <h2 class="text-4xl font-bold text-center mb-4 text-gray-900 hidden md:block">About Us</h2>
                         <p class="mb-6">
                             Fatsolelo is a consulting organization with over 20 years of full-cycle Human Resource Management experience. 
                             We pride ourselves on providing tailored HR solutions to businesses of all sizes, focusing on practical and efficient strategies to meet your organizational needs.
@@ -1049,6 +1053,8 @@
                         <li><a href="#hr" class="text-gray-400 hover:text-white transition-colors">HR</a></li>
                         <li><a href="#labour" class="text-gray-400 hover:text-white transition-colors">Labour</a></li>
                         <li><a href="#training" class="text-gray-400 hover:text-white transition-colors">Training</a></li>
+                        <li><a href="#system" class="text-gray-400 hover:text-white transition-colors">Time & Attendance</a></li>
+                        <li><a href="#careers" class="text-gray-400 hover:text-white transition-colors">Careers</a></li>
                         <li><a href="#contact" class="text-gray-400 hover:text-white transition-colors">Contact</a></li>
                     </ul>
                 </div>
@@ -1062,6 +1068,10 @@
                         <li class="text-gray-400">Internal Audit</li>
                         <li class="text-gray-400">Labour Law Compliance</li>
                         <li class="text-gray-400">Training & Development</li>
+                        <li class="text-gray-400">Payroll Services</li>
+                        <li class="text-gray-400">Employment Equity</li>
+                        <li class="text-gray-400">Time and Attendance Systems</li>
+                        <li class="text-gray-400">Careers and Recruitment</li>
                     </ul>
                 </div>
 
