--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
         </section>
 
         <!-- Time and Attendance Section -->
-        <section id="system" class="py-20 bg-gray-50">
+        <section id="system" class="py-20">
             <div class="container mx-auto px-4">
                 <h2 class="text-4xl font-bold text-center mb-12">Time and Attendance</h2>
                 <div class="max-w-6xl mx-auto">
@@ -776,15 +776,15 @@
                         <!-- Left Column -->
                         <div class="space-y-8" >
                             <div>
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-4">Cloud-Based Solution</h3>
-                                <p class="text-gray-600">
+                                <h3 class="text-xl font-semibold text-gray-800 mb-4">Cloud-Based Solution</h3>
+                                <p class="text-gray-600 text-sm md:text-base">
                                     Our Time and Attendance system is built on a robust cloud platform, ensuring secure access to your data from anywhere, anytime. 
                                     The scalable architecture grows with your business needs.
                                 </p>
                             </div>
                             <div>
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-4">Seamless Integration</h3>
-                                <p class="text-gray-600">
+                                <h3 class="text-xl font-semibold text-gray-800 mb-4">Seamless Integration</h3>
+                                <p class="text-gray-600 text-sm md:text-base">
                                     Direct integration with payroll systems ensures accurate and efficient processing of employee time data. 
                                     Eliminate manual data entry and reduce processing errors.
                                 </p>
@@ -794,15 +794,15 @@
                         <!-- Right Column -->
                         <div class="space-y-8">
                             <div>
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-4">Easy Implementation</h3>
-                                <p class="text-gray-600">
+                                <h3 class="text-xl font-semibold text-gray-800 mb-4">Easy Implementation</h3>
+                                <p class="text-gray-600 text-sm md:text-base">
                                     Simple setup and installation process with minimal disruption to your operations. 
                                     Our team provides comprehensive support throughout the implementation phase.
                                 </p>
                             </div>
                             <div>
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-4">Competitive Pricing</h3>
-                                <p class="text-gray-600">
+                                <h3 class="text-xl font-semibold text-gray-800 mb-4">Competitive Pricing</h3>
+                                <p class="text-gray-600 text-sm md:text-base">
                                     Affordable solutions that provide excellent value for your investment. 
                                     Flexible pricing plans designed to accommodate businesses of all sizes.
                                 </p>
