--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
         <!-- Careers Section -->
         <section id="careers" class="py-20 bg-teal-950">
             <div class="container mx-auto px-4">
-                <h2 class="text-4xl font-bold text-center mb-12 text-white">Careers</h2>
+                <h2 class="text-4xl font-bold text-center mb-12 text-white" data-aos="fade-down">Careers</h2>
                 <div class="max-w-6xl mx-auto">
                     <div class="grid md:grid-cols-3 gap-8">
                         <!-- Current Vacancies (2/3 width) -->
