--- a/index.html
+++ b/index.html
@@ -814,55 +814,54 @@
         </section>
 
         <!-- Careers Section -->
-        <section id="careers" class="py-20 bg-teal-950">
+        <section id="careers" class="py-12 md:py-20 bg-teal-950">
             <div class="container mx-auto px-4">
-                <h2 class="text-4xl font-bold text-center mb-12 text-white" data-aos="fade-down">Careers</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-white">Careers</h2>
                 <div class="max-w-6xl mx-auto">
-                    <div class="grid md:grid-cols-3 gap-8">
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
                         <!-- Current Vacancies (2/3 width) -->
                         <div class="md:col-span-2">
-                            <div class="bg-white rounded-xl shadow-lg p-8 md:p-12">
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-6">Current Vacancies</h3>
-                                <div class="space-y-6 max-h-[600px] overflow-y-auto pr-4 custom-scrollbar">
+                            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8 lg:p-12">
+                                <h3 class="text-xl md:text-2xl font-semibold text-gray-800 mb-4 md:mb-6">Current Vacancies</h3>
+                                <div class="space-y-4 md:space-y-6 max-h-[400px] md:max-h-[600px] overflow-y-auto pr-2 md:pr-4 custom-scrollbar">
                                     <!-- Job Listing Template -->
-                                    <div class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
-                                        <h4 class="text-xl font-semibold text-gray-800 mb-2">HR Consultant</h4>
-                                        <p class="text-gray-600 mb-4">Join our team of expert HR professionals and help shape the future of HR consulting.</p>
-                                        <div class="flex flex-wrap gap-4">
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">Full-time</span>
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">Johannesburg</span>
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">5+ years experience</span>
+                                    <div class="border border-gray-200 rounded-lg p-4 md:p-6 hover:shadow-md transition-shadow">
+                                        <h4 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">HR Consultant</h4>
+                                        <p class="text-sm md:text-base text-gray-600 mb-3 md:mb-4">Join our team of expert HR professionals and help shape the future of HR consulting.</p>
+                                        <div class="flex flex-wrap gap-2 md:gap-4">
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Full-time</span>
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Johannesburg</span>
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">5+ years experience</span>
                                         </div>
                                     </div>
 
-                                    <div class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
-                                        <h4 class="text-xl font-semibold text-gray-800 mb-2">Training Coordinator</h4>
-                                        <p class="text-gray-600 mb-4">Help organizations develop their workforce through effective training programs.</p>
-                                        <div class="flex flex-wrap gap-4">
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">Full-time</span>
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">Johannesburg</span>
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">3+ years experience</span>
+                                    <div class="border border-gray-200 rounded-lg p-4 md:p-6 hover:shadow-md transition-shadow">
+                                        <h4 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">Training Coordinator</h4>
+                                        <p class="text-sm md:text-base text-gray-600 mb-3 md:mb-4">Help organizations develop their workforce through effective training programs.</p>
+                                        <div class="flex flex-wrap gap-2 md:gap-4">
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Full-time</span>
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Johannesburg</span>
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">3+ years experience</span>
                                         </div>
                                     </div>
 
-                                    <!-- Additional sample job listings -->
-                                    <div class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
-                                        <h4 class="text-xl font-semibold text-gray-800 mb-2">Payroll Specialist</h4>
-                                        <p class="text-gray-600 mb-4">Manage payroll operations and ensure compliance with labor laws and regulations.</p>
-                                        <div class="flex flex-wrap gap-4">
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">Full-time</span>
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">Johannesburg</span>
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">4+ years experience</span>
+                                    <div class="border border-gray-200 rounded-lg p-4 md:p-6 hover:shadow-md transition-shadow">
+                                        <h4 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">Payroll Specialist</h4>
+                                        <p class="text-sm md:text-base text-gray-600 mb-3 md:mb-4">Manage payroll operations and ensure compliance with labor laws and regulations.</p>
+                                        <div class="flex flex-wrap gap-2 md:gap-4">
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Full-time</span>
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Johannesburg</span>
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">4+ years experience</span>
                                         </div>
                                     </div>
 
-                                    <div class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow">
-                                        <h4 class="text-xl font-semibold text-gray-800 mb-2">HR Administrator</h4>
-                                        <p class="text-gray-600 mb-4">Support HR operations and maintain employee records and documentation.</p>
-                                        <div class="flex flex-wrap gap-4">
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">Full-time</span>
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">Johannesburg</span>
-                                            <span class="bg-gray-100 text-gray-700 px-3 py-1 rounded-full text-sm">2+ years experience</span>
+                                    <div class="border border-gray-200 rounded-lg p-4 md:p-6 hover:shadow-md transition-shadow">
+                                        <h4 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">HR Administrator</h4>
+                                        <p class="text-sm md:text-base text-gray-600 mb-3 md:mb-4">Support HR operations and maintain employee records and documentation.</p>
+                                        <div class="flex flex-wrap gap-2 md:gap-4">
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Full-time</span>
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Johannesburg</span>
+                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">2+ years experience</span>
                                         </div>
                                     </div>
                                 </div>
@@ -871,32 +870,32 @@
 
                         <!-- Application Instructions (1/3 width) -->
                         <div class="md:col-span-1">
-                            <div class="bg-white rounded-xl shadow-lg p-8 md:p-12 h-full">
-                                <h3 class="text-2xl font-semibold text-gray-800 mb-6">How to Apply</h3>
-                                <div class="space-y-8">
+                            <div class="bg-white rounded-xl shadow-lg p-6 md:p-8 lg:p-12">
+                                <h3 class="text-xl md:text-2xl font-semibold text-gray-800 mb-4 md:mb-6">How to Apply</h3>
+                                <div class="space-y-6 md:space-y-8">
                                     <!-- Email Instructions -->
                                     <div>
-                                        <h4 class="text-lg font-semibold text-gray-800 mb-3">Email Your Application</h4>
-                                        <p class="text-gray-600 mb-2">Send your resume to:</p>
-                                        <a href="mailto:recruitment@fatsolelo.co.za" class="text-teal-950 hover:text-teal-900 font-medium text-lg block mb-4">
+                                        <h4 class="text-base md:text-lg font-semibold text-gray-800 mb-2 md:mb-3">Email Your Application</h4>
+                                        <p class="text-sm md:text-base text-gray-600 mb-2">Send your resume to:</p>
+                                        <a href="mailto:recruitment@fatsolelo.co.za" class="text-teal-950 hover:text-teal-900 font-medium text-base md:text-lg block mb-3 md:mb-4 break-all">
                                             recruitment@fatsolelo.co.za
                                         </a>
                                     </div>
 
                                     <!-- Application Requirements -->
                                     <div>
-                                        <h4 class="text-lg font-semibold text-gray-800 mb-3">Application Requirements</h4>
-                                        <ul class="space-y-3 text-gray-600">
+                                        <h4 class="text-base md:text-lg font-semibold text-gray-800 mb-2 md:mb-3">Application Requirements</h4>
+                                        <ul class="space-y-2 md:space-y-3 text-sm md:text-base text-gray-600">
                                             <li class="flex items-start">
-                                                <span class="text-teal-950 mr-2">•</span>
+                                                <span class="text-teal-950 mr-2 flex-shrink-0">•</span>
                                                 <span>Clearly state the position you are applying for in the subject line of your email</span>
                                             </li>
                                             <li class="flex items-start">
-                                                <span class="text-teal-950 mr-2">•</span>
+                                                <span class="text-teal-950 mr-2 flex-shrink-0">•</span>
                                                 <span>Include your most recent resume/CV</span>
                                             </li>
                                             <li class="flex items-start">
-                                                <span class="text-teal-950 mr-2">•</span>
+                                                <span class="text-teal-950 mr-2 flex-shrink-0">•</span>
                                                 <span>Highlight relevant experience and qualifications</span>
                                             </li>
                                         </ul>
@@ -904,8 +903,8 @@
 
                                     <!-- What to Expect -->
                                     <div>
-                                        <h4 class="text-lg font-semibold text-gray-800 mb-3">What to Expect</h4>
-                                        <p class="text-gray-600">
+                                        <h4 class="text-base md:text-lg font-semibold text-gray-800 mb-2 md:mb-3">What to Expect</h4>
+                                        <p class="text-sm md:text-base text-gray-600">
                                             We review all applications and will contact shortlisted candidates within 2 weeks of application.
                                         </p>
                                     </div>
