--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             
             .custom-scrollbar::-webkit-scrollbar-thumb {
                 background: #666; /* Darker color for better visibility */
-                border: 2px solid #f1f1f1;
+                border: 2px solid #120202;
             }
         }
     </style>
@@ -721,7 +721,7 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-4xl text-white font-bold text-center mb-12" data-aos="fade-down">Training & Development</h2>                
                 <!-- Training & Development -->
-                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center mb-12 md:mb-20">
+                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center mb-12 md:mb-20 overflow-hidden">
                     <!-- Image Column -->
                     <div class="relative order-1 md:order-none" data-aos="fade-right">
                         <div class="aspect-w-16 aspect-h-9 rounded-xl overflow-hidden shadow-xl">
@@ -763,7 +763,7 @@
                 </div>
 
                 <!-- Training Courses -->
-                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center">
+                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center overflow-hidden">
                     <!-- Content Column -->
                     <div class="space-y-4 md:space-y-6 order-2 md:order-1" data-aos="fade-right" data-aos-delay="200">
                         <h3 class="text-2xl font-semibold text-white">Specialized Training Courses</h3>
