--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                 </div>
 
                 <!-- Second Row - Strategic Planning and Internal Audit -->
-                <div class="grid md:grid-cols-2 gap-8">
+                <div class="grid md:grid-cols-2 gap-8 overflow-hidden">
                     <!-- Strategic Planning Card -->
                     <div class="backdrop-blur-lg bg-white bg-opacity-10 rounded-xl p-8 text-white border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300" data-aos="fade-right" data-aos-delay="200">
                         <div class="bg-orange-300 w-16 h-16 rounded-lg flex items-center justify-center mb-6">
