--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
                         <li><a href="#hr" class="text-gray-400 hover:text-white transition-colors">HR</a></li>
                         <li><a href="#labour" class="text-gray-400 hover:text-white transition-colors">Labour</a></li>
                         <li><a href="#training" class="text-gray-400 hover:text-white transition-colors">Training</a></li>
-                        <li><a href="#system" class="text-gray-400 hover:text-white transition-colors">Time & Attendance</a></li>
+                        <li><a href="#system" class="text-gray-400 hover:text-white transition-colors">System</a></li>
                         <li><a href="#careers" class="text-gray-400 hover:text-white transition-colors">Careers</a></li>
                         <li><a href="#contact" class="text-gray-400 hover:text-white transition-colors">Contact</a></li>
                     </ul>
