animation error fix

--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,8 @@
         AOS.init({
             duration: 1000,
             once: true,
-            offset: 100
+            offset: 100,
+            easing: 'ease-in-out'
         });
     </script>
 </body>
