--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
         <!-- Careers Section -->
         <section id="careers" class="py-12 md:py-20 bg-teal-950">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-white">Careers</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-white" data-aos="fade-down">Careers</h2>
                 <div class="max-w-6xl mx-auto">
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
                         <!-- Current Vacancies (2/3 width) -->
