--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-2">
                 <div class="flex items-center">
-                    <img src="images/FatsoLelo-logo.webp" alt="FatsoLelo Logo" class="h-20 md:h-24 md:w-30">
+                    <a href="index.html">                    
+                        <img src="images/FatsoLelo-logo.webp" alt="FatsoLelo Logo" class="h-16 md:h-24 transition-all duration-300">
+                    </a>
                 </div>
                 
                 <!-- Desktop Menu -->
@@ -496,18 +498,6 @@
                                  alt="FatsoLelo Team" 
                                  class="object-cover w-full h-full">
                         </div>
-                        <!-- Desktop Experience Card -->
-                        <div class="absolute -bottom-16 -right-8 bg-gray-50 text-white p-6 rounded-lg shadow-lg hidden md:block">
-                            <img src="images/illustration.webp" 
-                                 alt="illustration" 
-                                 class="object-cover w-[250px] h-[200px]">
-                        </div>
-                        <!-- Mobile Experience Card -->
-                        <div class="md:hidden absolute -bottom-6 -right-4 bg-gray-50 text-white p-4 rounded-lg shadow-lg">
-                            <img src="images/illustration.webp" 
-                                 alt="illustration" 
-                                 class="object-cover w-[150px] h-[150px]">
-                        </div>
                     </div>
 
                     <!-- Text Column -->
@@ -523,6 +513,11 @@
                         <p class="mb-6">
                             Our services are designed to support your HR functions while ensuring compliance, development, and growth for your business.
                         </p>
+                        <div class="hidden md:flex justify-center">
+                            <img src="images/illustration.webp" 
+                                 alt="illustration" 
+                                 class="w-[250px] h-[200px] object-cover">
+                        </div>                   
                     </div>
                 </div>
             </div>
