--- a/index.html
+++ b/index.html
@@ -915,54 +915,15 @@
         <!-- Careers Section -->
         <section id="careers" class="py-12 md:py-20 bg-teal-950">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-white" data-aos="fade-down">Careers</h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 md:mb-12 text-white">Careers</h2>
                 <div class="max-w-6xl mx-auto">
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
                         <!-- Current Vacancies (2/3 width) -->
                         <div class="md:col-span-2">
                             <div class="bg-white rounded-xl shadow-lg p-6 md:p-8 lg:p-12">
                                 <h3 class="text-xl md:text-2xl font-semibold text-gray-800 mb-4 md:mb-6">Current Vacancies</h3>
-                                <div class="space-y-4 md:space-y-6 max-h-[400px] md:max-h-[600px] overflow-y-auto pr-2 md:pr-4 custom-scrollbar">
-                                    <!-- Job Listing Template -->
-                                    <div class="border border-gray-200 rounded-lg p-4 md:p-6 hover:shadow-md transition-shadow">
-                                        <h4 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">HR Consultant</h4>
-                                        <p class="text-sm md:text-base text-gray-600 mb-3 md:mb-4">Join our team of expert HR professionals and help shape the future of HR consulting.</p>
-                                        <div class="flex flex-wrap gap-2 md:gap-4">
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Full-time</span>
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Johannesburg</span>
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">5+ years experience</span>
-                                        </div>
-                                    </div>
-
-                                    <div class="border border-gray-200 rounded-lg p-4 md:p-6 hover:shadow-md transition-shadow">
-                                        <h4 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">Training Coordinator</h4>
-                                        <p class="text-sm md:text-base text-gray-600 mb-3 md:mb-4">Help organizations develop their workforce through effective training programs.</p>
-                                        <div class="flex flex-wrap gap-2 md:gap-4">
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Full-time</span>
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Johannesburg</span>
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">3+ years experience</span>
-                                        </div>
-                                    </div>
-
-                                    <div class="border border-gray-200 rounded-lg p-4 md:p-6 hover:shadow-md transition-shadow">
-                                        <h4 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">Payroll Specialist</h4>
-                                        <p class="text-sm md:text-base text-gray-600 mb-3 md:mb-4">Manage payroll operations and ensure compliance with labor laws and regulations.</p>
-                                        <div class="flex flex-wrap gap-2 md:gap-4">
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Full-time</span>
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Johannesburg</span>
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">4+ years experience</span>
-                                        </div>
-                                    </div>
-
-                                    <div class="border border-gray-200 rounded-lg p-4 md:p-6 hover:shadow-md transition-shadow">
-                                        <h4 class="text-lg md:text-xl font-semibold text-gray-800 mb-2">HR Administrator</h4>
-                                        <p class="text-sm md:text-base text-gray-600 mb-3 md:mb-4">Support HR operations and maintain employee records and documentation.</p>
-                                        <div class="flex flex-wrap gap-2 md:gap-4">
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Full-time</span>
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">Johannesburg</span>
-                                            <span class="bg-gray-100 text-gray-700 px-2 md:px-3 py-1 rounded-full text-xs md:text-sm">2+ years experience</span>
-                                        </div>
-                                    </div>
+                                <div id="vacancies-list" class="space-y-4 md:space-y-6 max-h-[400px] md:max-h-[600px] overflow-y-auto pr-2 md:pr-4 custom-scrollbar">
+                                    <!-- Job listings will be dynamically inserted here -->
                                 </div>
                             </div>
                         </div>
