revert on mobile img

--- a/index.html
+++ b/index.html
@@ -576,6 +576,12 @@
                             Fatsolelo is a consulting organization with over 20 years of full-cycle Human Resource Management experience. 
                             We pride ourselves on providing tailored HR solutions to businesses of all sizes, focusing on practical and efficient strategies to meet your organizational needs.
                         </p>
+                        <!-- Mobile Experience Card -->
+                        <div class="md:hidden flex justify-center mb-6">
+                            <img src="images/illustration.webp" 
+                                 alt="illustration" 
+                                 class="object-cover w-[150px] h-[150px]">
+                        </div>
                         <p class="mb-6">
                             Our services are designed to support your HR functions while ensuring compliance, development, and growth for your business.
                         </p>
