--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
                             <!-- Contact Form -->
                             <div class="p-8 md:p-12">
                                 <h3 class="text-2xl font-semibold text-gray-800 mb-6">Get in Touch</h3>
-                                <form action="https://formspree.io/f/xovwlgrd" method="POST" class="space-y-6" id="contactForm" novalidate>
+                                <form action="https://formspree.io/f/xovwlgrd" method="POST" class="space-y-6" id="contactForm" novalidate onsubmit="setTimeout(() => { this.reset(); }, 10)">
                                     <div class="grid md:grid-cols-2 gap-6">
                                         <div>
                                             <label class="block text-gray-700 mb-2" for="name">Full Name <span class="text-red-500">*</span></label>
