--- a/index.html
+++ b/index.html
@@ -573,10 +573,15 @@
                         <h2 class="text-4xl font-bold text-center mb-4 text-gray-900 md:hidden">About Us</h2>
                         <!-- Desktop About Us Heading -->
                         <h2 class="text-4xl font-bold text-center mb-4 text-gray-900 hidden md:block">About Us</h2>
-                        <p class="mb-6">
+                        <p class="mb-4">
                             Fatsolelo is a consulting organization with over 20 years of full-cycle Human Resource Management experience. 
                             We pride ourselves on providing tailored HR solutions to businesses of all sizes, focusing on practical and efficient strategies to meet your organizational needs.
                         </p>
+                        <div class="hidden md:flex justify-center my-4">
+                            <img src="images/illustration.webp" 
+                                 alt="illustration" 
+                                 class="w-[250px] h-[200px] object-cover">
+                        </div>                   
                         <!-- Mobile Experience Card -->
                         <div class="md:hidden flex justify-center mb-6">
                             <img src="images/illustration.webp" 
@@ -586,11 +591,6 @@
                         <p class="mb-6">
                             Our services are designed to support your HR functions while ensuring compliance, development, and growth for your business.
                         </p>
-                        <div class="hidden md:flex justify-center">
-                            <img src="images/illustration.webp" 
-                                 alt="illustration" 
-                                 class="w-[250px] h-[200px] object-cover">
-                        </div>                   
                     </div>
                 </div>
             </div>
